--- a/templates/driver/driverregister.html
+++ b/templates/driver/driverregister.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <title>Driver-LOGIN</title>
@@ -7,39 +6,23 @@
     <link rel="stylesheet" href="static/files-login/core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" href="static/files-login/theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" href="static/files-login/demo.css" />
-
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="static/files-login/perfect-scrollbar.css" />
-  <link href="static/img/icons/acts.png" rel="icon">
-<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
+    <link href="static/img/icons/acts.png" rel="icon">
     <!-- Page CSS -->
     <!-- Page -->
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
     <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
-
-    <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
-    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="static/files-login/config.js"></script>
   </head>
 
   <body>
-    <!-- Content -->
-
-   
       <div class="authentication-wrapper authentication-basic container-p-y">
- 
-          <!-- Register -->
           <div class="card">
             <div class="card-body">
-              <!-- Logo -->
               <div class="app-brand justify-content-center">
-                <a href="static/login-options.php" class="app-brand-link gap-2">
-                  
-                 
-                  <span class="app-brand-text demo text-body fw-bolder" class="mb-2">Acts Auto</span>
-
-                </a>
+                <a href="static/login-options.php" class="app-brand-link gap-2"><span class="app-brand-text demo text-body fw-bolder" class="mb-2">Acts Auto</span></a>
               </div>
               <!-- /Logo -->
               <h4 class="mb-2"><b>Driver Registration</b></h4>
@@ -86,30 +69,16 @@
             </div>
           </div>
         </div>
- 
-
-
-    <!-- / Content -->
-
-
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
     <script src="static/files-login/jquery.js"></script>
     <script src="static/files-login/popper.js"></script>
     <script src="static/files-login/bootstrap.js"></script>
     <script src="static/files-login/perfect-scrollbar.js"></script>
-
     <script src="static/files-login/menu.js"></script>
-    <!-- endbuild -->
-
-    <!-- Vendors JS -->
-
     <!-- Main JS -->
     <script src="static/files-login/main.js"></script>
-
     <!-- Page JS -->
-
-    <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
