--- a/templates/hospital/hospitalregister.html
+++ b/templates/hospital/hospitalregister.html
@@ -11,42 +11,23 @@
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="static/files-login/perfect-scrollbar.css" />
     <link href="static/img/icons/acts.png" rel="icon">
-    <!-- Page CSS -->
-    <!-- Page -->
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
-<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
-    <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
-
-    <!--! Template customizer & Theme config static/files MUST be included after core stylesheets and helpers.js in the <head> section -->
-    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="static/files-login/config.js"></script>
   </head>
 
   <body>
-    <!-- Content -->
-
-   
       <div class="authentication-wrapper authentication-basic container-p-y">
- 
-          <!-- Register -->
           <div class="card">
             <div class="card-body">
-              <!-- Logo -->
               <div class="app-brand justify-content-center">
-                <a href="static/login-options.php" class="app-brand-link gap-2">
-                  
-                 
-                  <span class="app-brand-text demo text-body fw-bolder" class="mb-2">Acts Auto</span>
-
-                </a>
+                <a href="static/login-options.php" class="app-brand-link gap-2"><span class="app-brand-text demo text-body fw-bolder" class="mb-2">Acts Auto</span></a>
               </div>
               <!-- /Logo -->
               <h4 class="mb-2"><b>Hospital Registration</b></h4>
               <p class="mb-4">Enter the details of the Hospital using the Hospital ID &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
               <form id="formAuthentication" class="mb-3" action="{{ url_for('hospitalregisterbackend') }}" method="POST">
-
               <div class="mb-3">
                   <label for="hospital_id" class="form-label">Hospital ID</label>
                   <input type="text" class="form-control" id="hospital_id" name="hospital_id"
@@ -94,7 +75,6 @@
                     <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
                   </div>
                 </div>
-
                 <div class="mb-3">
                   <button class="btn btn-danger" type="submit">Sign in</button>
                 </div>
@@ -104,30 +84,15 @@
             </div>
           </div>
         </div>
- 
-
-
-    <!-- / Content -->
-
-
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
     <script src="static/files-login/jquery.js"></script>
     <script src="static/files-login/popper.js"></script>
     <script src="static/files-login/bootstrap.js"></script>
     <script src="static/files-login/perfect-scrollbar.js"></script>
-
     <script src="static/files-login/menu.js"></script>
-    <!-- endbuild -->
-
-    <!-- Vendors JS -->
-
-    <!-- Main JS -->
     <script src="static/files-login/main.js"></script>
-
     <!-- Page JS -->
-
-    <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
