--- a/templates/driver/acceptReject.html
+++ b/templates/driver/acceptReject.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -32,7 +32,6 @@
 </head>
 
 <body>
-
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
@@ -42,9 +41,9 @@
             <li><a class="nav-link scrollto" href="{{url_for('home') }}">Logout</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>
     </div>
-  </header><!-- End Header -->
+  </header>
  
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center" >
