--- a/templates/driver/accidentdetail.html
+++ b/templates/driver/accidentdetail.html
@@ -12,11 +12,12 @@
   <!-- Favicons -->
 <link href="static/img/icons/acts.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
+ 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
+   <link href="static/library/bootstrap-5/bootstrap.min.css" rel="stylesheet" />
   <link href="static/assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -29,14 +30,7 @@
 
   <!-- Template Main CSS File -->
   <link href="static/assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: OnePage
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/
-  * Author: BootstrapMade.com
-  ======================================================== -->
-
+ 
 </head>
 
 <body>
@@ -46,16 +40,13 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo"><a href="#">ACTS AUTO</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="{{ url_for('driver_home') }}">Home</a></li>
-          
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav> 
 
     </div>
   </header><!-- End Header -->
@@ -80,8 +71,8 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="form_name">Driver ID: </label>
-                                                <input id="form_name" type="text" name="actsid" class="form-control" placeholder="acts driver id" required="required" data-error="Firstname is required.">
+                                                <label for="form_name">Enter Driver name: </label>
+                                                <input id="form_name" type="text" name="actsname" class="form-control" placeholder="acts driver name" required="required" data-error="Name is required.">
                                             </div>
                                         </div>
 
@@ -117,6 +108,17 @@
                                         <input id="form_lastname" type="text" name="hospname" placeholder="Hospital patient taken to" class="form-control"   required="required" data-error="Lastname is required.">
                                     </div>
                                 </div>
+                               <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="form_need">Select the police station</label>
+                                        <select id="form_need" name="station" class="form-control" required="required" data-error="Please specify your need.">
+                                            <option value="" selected disabled>--Select the police station--</option>
+                                          {% for row in stationmail %}
+                                          <option >{{row.stationname}}</option>
+                                          {% endfor %}
+                                        </select>
+                                    </div>
+                                </div>
  
 
                              </div>
@@ -140,9 +142,9 @@
                             </div>
                             </div>
                         </div>
-                            <!-- /.8 -->
+               
                         </div>
-                        <!-- /.row-->
+                      
                     </div>
                     </div>
     </div>
@@ -162,10 +164,17 @@
   <script src="static/assets/vendor/php-email-form/validate.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   
-
+ <script src="static/library/bootstrap-5/bootstrap.bundle.min.js"></script>
+  <script src="static/library/dselect.js"></script>
   <!-- Template Main JS File -->
   <script src="static/assets/js/main.js"></script>
-
+  <script>
+      var select_box_element = document.querySelector('#station');
+  
+      dselect(select_box_element, {
+          search: true
+      });
+  </script>
 </body>
 
 </html>
