--- a/templates/driver/driver_login.html
+++ b/templates/driver/driver_login.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="static/files-login/core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" href="static/files-login/theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" href="static/files-login/demo.css" />
-<link href="static/img/icons/acts.png" rel="icon">
+    <link href="static/img/icons/acts.png" rel="icon">
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
-<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
+ 
     <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
  
@@ -22,16 +22,10 @@
     <!-- Content -->
 
       <div class="authentication-wrapper authentication-basic container-p-y">
-        
-          <!-- Register -->
           <div class="card">
             <div class="card-body">
-              <!-- Logo -->
               <div class="app-brand justify-content-center">
-                <a href="login-options.php" class="app-brand-link gap-2">
-
-                  <span class="app-brand-text demo text-body fw-bolder">AUTO ACTS</span> <br> <br> <br> <br> 
-                </a>
+                <a href="#" class="app-brand-link gap-2"><span class="app-brand-text demo text-body fw-bolder">AUTO ACTS</span> <br> <br> <br> <br> </a>
               </div>
               <!-- /Logo -->
               <h4 class="mb-2" class="text-center"><b>Driver Login</b></h4>
@@ -53,7 +47,6 @@
                   </div>
                 </div>
 
-                 
                 <div class="mb-3" class="col-md-12 text-center">
                   <button class="btn btn-danger" href="driver_police.php" type="submit">Sign in</button>
                 </div>
@@ -63,19 +56,13 @@
             </div>
           
         </div>
- 
     </div>
-
     <script src="static/files-login/jquery.js"></script>
     <script src="static/files-login/popper.js"></script>
     <script src="static/files-login/bootstrap.js"></script>
     <script src="static/files-login/perfect-scrollbar.js"></script>
-
     <script src="static/files-login/menu.js"></script>
-
     <script src="static/files-login/main.js"></script>
-
-
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
