--- a/templates/hospital/bloodonatorlist.html
+++ b/templates/hospital/bloodonatorlist.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,15 +8,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.bootstrap.min.css">
   <link href="static/img/icons/acts.png" rel="icon">
-<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
-    <title>Document</title>
-    <style>
-        
-        section{
-          margin:2em;
-        }
-
-    </style>
+    <title>ACTS AUTO</title>
 </head>
 <body>
     <nav class="navbar navbar-inverse">
