--- a/templates/hospital/bloodrequestlist.html
+++ b/templates/hospital/bloodrequestlist.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -11,7 +11,6 @@
         background-color:#f3e5dc;
       }
     </style>
-<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
   </head>
   <body>
 
