--- a/templates/hospital/hospital_login.html
+++ b/templates/hospital/hospital_login.html
@@ -1,44 +1,26 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
-
     <title>ACTS AUTO</title>
-
     <!-- Core CSS -->
     <link href="static/img/icons/acts.png" rel="icon">
     <link rel="stylesheet" href="static/files-login/core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" href="static/files-login/theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" href="static/files-login/demo.css" />
-<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
-
-    <!-- Page CSS -->
-    <!-- Page -->
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
-    <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
- 
   </head>
 
   <body>
-    <!-- Content -->
-
       <div class="authentication-wrapper authentication-basic container-p-y">
-        
-          <!-- Register -->
           <div class="card">
             <div class="card-body">
-              <!-- Logo -->
               <div class="app-brand justify-content-center">
-                <a href="static/login-options.php" class="app-brand-link gap-2">
- 
-                  <span class="app-brand-text demo text-body fw-bolder">AUTO ACTS</span> <br> <br> <br> <br> 
-
-                </a>
+                <a href="#" class="app-brand-link gap-2"><span class="app-brand-text demo text-body fw-bolder">AUTO ACTS</span> <br> <br> <br> <br> </a>
               </div>
-              <!-- /Logo -->
+            
               <h4 class="mb-2" class="text-center"><b>Hospital Login</b></h4>
               <p class="mb-4">Please sign-in to your account using Hospital ID and Password</p>
 
@@ -57,37 +39,24 @@
                     <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
                   </div>
                 </div>
-
-                 
                 <div class="mb-3" class="col-md-12 text-center">
                   <button class="btn btn-danger" href="hospital_home.php" type="submit">Sign in</button>
                 </div>
                 <span class="reg">Already have an account? <a class="text-danger" href="{{ url_for('hospitalregister') }}">Sign Up</a></span><br>
                 <span class="reg" >Back to <a class="text-danger" href="{{ url_for('home') }}">Home</a></span>
               </form>
-            </div>
-          
+            </div>  
         </div>
- 
     </div>
-    <!-- / Content -->
-    <!-- Core JS -->
+
     <!-- build:js assets/vendor/js/core.js -->
     <script src="static/files-login/jquery.js"></script>
     <script src="static/files-login/popper.js"></script>
     <script src="static/files-login/bootstrap.js"></script>
     <script src="static/files-login/perfect-scrollbar.js"></script>
-
     <script src="static/files-login/menu.js"></script>
-    <!-- endbuild -->
-
-    <!-- Vendors JS -->
-
     <!-- Main JS -->
     <script src="static/files-login/main.js"></script>
-
-    <!-- Page JS -->
-
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
