--- a/templates/user/userregister.html
+++ b/templates/user/userregister.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <title>User -LOGIN</title>
@@ -7,70 +6,43 @@
     <link rel="stylesheet" href="static/files-login/core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" href="static/files-login/theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" href="static/files-login/demo.css" />
-
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="static/files-login/perfect-scrollbar.css" />
-   <link href="static/img/icons/acts.png" rel="icon">
-    <!-- Page CSS -->
-    <!-- Page -->
+    <link href="static/img/icons/acts.png" rel="icon">
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
-<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
-    <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
-
-    <!--! Template customizer & Theme config static/files MUST be included after core stylesheets and helpers.js in the <head> section -->
-    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="static/files-login/config.js"></script>
   </head>
-
   <body>
-    <!-- Content -->
-
-   
       <div class="authentication-wrapper authentication-basic container-p-y">
- 
-          <!-- Register -->
           <div class="card">
             <div class="card-body">
-              <!-- Logo -->
               <div class="app-brand justify-content-center">
-                <a href="static/login-options.php" class="app-brand-link gap-2">
-                  
-                 
-                  <span class="app-brand-text demo text-body fw-bolder" class="mb-2">Acts Auto</span>
-
-                </a>
+                <a href="static/login-options.php" class="app-brand-link gap-2"><span class="app-brand-text demo text-body fw-bolder" class="mb-2">Acts Auto</span></a>
               </div>
-              <!-- /Logo -->
               <h4 class="mb-2"><b>User Registration</b></h4>
               <p class="mb-4">Enter the details of the User using the User ID and other details</p>
-
               <form id="formAuthentication" class="mb-3" action="{{url_for('userregisterbackend') }}" method="POST">
-
               <div class="mb-3">
                   <label for="name" class="form-label">Name</label>
                   <input type="text" class="form-control" id="hname" name="name"
                     placeholder="Name" autofocus required>
                 </div>
-
                 <div class="mb-3">
                   <label for="phone" class="form-label">Phone</label>
                   <input type="text" class="form-control" id="hphone" name="phone"
                     placeholder=" Phone" autofocus required>
                 </div>
-
                 <div class="mb-3">
                   <label for="user_id" class="form-label">User ID</label>
                   <input type="text" class="form-control" id="user_id" name="user_id"
                     placeholder="Enter user ID" autofocus required>
                 </div>
-
                 <div class="mb-3">
                   <label for="email" class="form-label">Email</label>
                   <input type="email" class="form-control" id="email" name="email"
                     placeholder="Enter Email ID" autofocus required>
                 </div>
-
                 <div class="mb-3 form-password-toggle">
                   <div class="d-flex justify-content-between">
                     <label class="form-label" for="password">Password</label>
@@ -82,7 +54,6 @@
                     <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
                   </div>
                 </div>
-
                 <div class="mb-3">
                   <button class="btn btn-danger" type="submit">Sign in</button>
                 </div>
@@ -92,30 +63,13 @@
             </div>
           </div>
         </div>
- 
-
-
-    <!-- / Content -->
-
-
-    <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
     <script src="static/files-login/jquery.js"></script>
     <script src="static/files-login/popper.js"></script>
     <script src="static/files-login/bootstrap.js"></script>
     <script src="static/files-login/perfect-scrollbar.js"></script>
-
     <script src="static/files-login/menu.js"></script>
-    <!-- endbuild -->
-
-    <!-- Vendors JS -->
-
-    <!-- Main JS -->
     <script src="static/files-login/main.js"></script>
-
-    <!-- Page JS -->
-
-    <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
