--- a/templates/driver/accidentdetail.html
+++ b/templates/driver/accidentdetail.html
@@ -66,7 +66,7 @@
                         <div class="card mt-2 mx-auto p-4 bg-light">
                             <div class="card-body bg-light">
                             <div class = "container">
-                                <form id="contact-form" role="form" method="POST" action="{{ url_for('accidentdetail') }}">
+                                <form id="contact-form" role="form" method="POST" action="{{ url_for('accidentdetailbackend') }}">
                                     <div class="controls">
                                     <div class="row">
                                         <div class="col-md-6">
