--- a/templates/hospital/bloodrequestlist.html
+++ b/templates/hospital/bloodrequestlist.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="jumbotron">
-            <table  class='table table-info table-striped'>";
+            <table  class='table table-info table-striped'>
             <tr>
               <th>Name</th> 
               <th>Case</th> 
@@ -62,7 +62,7 @@
               <td>{{ row.bystander_ph}}</td>
             </tr>
             {% endfor %}
-           </table>;
+           </table>
         
             </div>
         </div>
