--- a/templates/hospital/hospitalregister.html
+++ b/templates/hospital/hospitalregister.html
@@ -27,7 +27,7 @@
               <h4 class="mb-2"><b>Hospital Registration</b></h4>
               <p class="mb-4">Enter the details of the Hospital using the Hospital ID &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
-              <form id="formAuthentication" class="mb-3" action="{{ url_for('hospitalregisterbackend') }}" method="POST">
+              <form id="formAuthentication" class="mb-3" action="{{ url_for('hospitalregister') }}" method="POST">
               <div class="mb-3">
                   <label for="hospital_id" class="form-label">Hospital ID</label>
                   <input type="text" class="form-control" id="hospital_id" name="hospital_id"
