--- a/templates/user/userregister.html
+++ b/templates/user/userregister.html
@@ -22,7 +22,7 @@
               </div>
               <h4 class="mb-2"><b>User Registration</b></h4>
               <p class="mb-4">Enter the details of the User using the User ID and other details</p>
-              <form id="formAuthentication" class="mb-3" action="{{url_for('userregisterbackend') }}" method="POST">
+              <form id="formAuthentication" class="mb-3" action="{{url_for('userregister') }}" method="POST">
               <div class="mb-3">
                   <label for="name" class="form-label">Name</label>
                   <input type="text" class="form-control" id="hname" name="name"
