--- a/templates/hospital/hospitalbloodrequest.html
+++ b/templates/hospital/hospitalbloodrequest.html
@@ -59,7 +59,7 @@
                         <div class="card mt-2 mx-auto p-4 bg-light">
                             <div class="card-body bg-light">
                             <div class = "container">
-                                <form id="contact-form" role="form" method="POST" action="{{url_for('hospitalbloodrequestbackend') }}">
+                                <form id="contact-form" role="form" method="POST" action="{{url_for('hospitalbloodrequest') }}">
                                     <div class="controls">
                                     <div class="row">
                                         <div class="col-md-6">
