--- a/templates/user/near_hospital.html
+++ b/templates/user/near_hospital.html
@@ -50,7 +50,7 @@
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       <nav id="navbar" class="navbar">
           <ul> 
-            <li><a class="nav-link scrollto" href="{{url_for('user_home')}}">Logout</a></li>
+            <li><a class="nav-link scrollto" href="{{url_for('user_home')}}">Home</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -66,7 +66,7 @@
           <h2>Nearest Hospital</h2>
         </div>
         <div class="row icon-boxes" id="hospitals">          
-                <h5>Fetching hospital details....wait for the magic...</h5>
+                <h5>Fetching hospital details....please wait</h5>
         </div>
        
       </div>
