--- a/templates/user/userbloodonation.html
+++ b/templates/user/userbloodonation.html
@@ -76,7 +76,7 @@
                         <div class="card mt-2 mx-auto p-4 bg-light">
                             <div class="card-body bg-light">
                             <div class = "container">
-                                <form id="contact-form" role="form" method="POST" action="{{url_for('userbloodonationbackend') }}">
+                                <form id="contact-form" role="form" method="POST" action="{{url_for('userbloodonation') }}">
                                     <div class="controls">
                                     <div class="row">
                                         <div class="col-md-6">
