--- a/templates/user/userbloodrequest.html
+++ b/templates/user/userbloodrequest.html
@@ -52,7 +52,7 @@
                         <div class="card mt-2 mx-auto p-4 bg-light">
                             <div class="card-body bg-light">
                             <div class = "container">
-                                <form id="contact-form" role="form" method="POST" action="{{url_for('userbloodrequestbackend') }}">
+                                <form id="contact-form" role="form" method="POST" action="{{url_for('userbloodrequest') }}">
                                     <div class="controls">
                                     <div class="row">
                                         <div class="col-md-6">
