--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -81,7 +81,7 @@
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="{{url_for('accidentdetail') }}"><button type="button"   class="btn btn-primary" > View Accident Details</button></a></h4>
+              <h4><a href="{{url_for('accidentlist') }}"><button type="button"   class="btn btn-primary" > View Accident Details</button></a></h4>
             </div>
           </div>
 
