--- a/templates/user/userbloodonation.html
+++ b/templates/user/userbloodonation.html
@@ -108,7 +108,7 @@
 
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="form_need">Donated within one month</label>
+                                        <label for="form_need">Donated within six month</label>
                                         <select id="form_need" name="donated" class="form-control" required="required" data-error="Please specify your need.">
                                             <option value="" selected disabled>--Select Your option--</option>
                                             <option >Yes</option>
