--- a/templates/admin/accidentlist.html
+++ b/templates/admin/accidentlist.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.bootstrap.min.css">
  <link href="static/img/icons/acts.png" rel="icon">
-
-  <link rel="manifest" href="/manifest.json">
+  <!--#manifest json file-->
+  <link rel="manifest" href="static/manifest.json">
 
     <title>ACTS</title>
     <style>
