--- a/templates/admin/driverregister.html
+++ b/templates/admin/driverregister.html
@@ -9,8 +9,8 @@
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="static/files-login/perfect-scrollbar.css" />
     <link href="static/img/icons/acts.png" rel="icon">
-    <!-- Page CSS -->
-    <!-- Page -->
+  <!--#manifest json file-->
+  <link rel="manifest" href="static/manifest.json">
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
     <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
