--- a/templates/hospital/bloodrequestlist.html
+++ b/templates/hospital/bloodrequestlist.html
@@ -11,6 +11,9 @@
         background-color:#f3e5dc;
       }
     </style>
+
+      <!--#manifest json file-->
+  <link rel="manifest" href="static/manifest.json">
   </head>
   <body>
 
