--- a/templates/hospital/hospitalregister.html
+++ b/templates/hospital/hospitalregister.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
     <script src="static/files-login/helpers.js"></script>
     <script src="static/files-login/config.js"></script>
+
+      <!--#manifest json file-->
+  <link rel="manifest" href="static/manifest.json">
+    
   </head>
 
   <body>
