--- a/templates/driver/driver_home.html
+++ b/templates/driver/driver_home.html
@@ -13,7 +13,9 @@
   <!-- Favicons -->
 <link href="static/img/icons/acts.png" rel="icon">
   <link href="static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
+
+    <!--#manifest json file-->
+  <link rel="manifest" href="static/manifest.json">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
