--- a/templates/driver/driver_login.html
+++ b/templates/driver/driver_login.html
@@ -16,6 +16,9 @@
  
     <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
+
+      <!--#manifest json file-->
+  <link rel="manifest" href="static/manifest.json">
  
   </head>
   <body>
