--- a/templates/hospital/bloodonatorlist.html
+++ b/templates/hospital/bloodonatorlist.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.bootstrap.min.css">
   <link href="static/img/icons/acts.png" rel="icon">
     <title>ACTS AUTO</title>
+
+    <!--#manifest json file-->
+  <link rel="manifest" href="static/manifest.json">
 </head>
 <body>
     <nav class="navbar navbar-inverse">
