--- a/templates/hospital/hospital_login.html
+++ b/templates/hospital/hospital_login.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="static/files-login/demo.css" />
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
     <script src="static/files-login/helpers.js"></script>
+
+  <!--#manifest json file-->
+  <link rel="manifest" href="static/manifest.json">
+    
   </head>
 
   <body>
