--- a/templates/user/user_login.html
+++ b/templates/user/user_login.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="static/files-login/theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" href="static/files-login/demo.css" />
     <link href="static/img/icons/acts.png" rel="icon">
-<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
-    <!-- Page CSS -->
-    <!-- Page -->
+  <!--#manifest json file-->
+  <link rel="manifest" href="static/manifest.json">
+
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
     <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
