--- a/templates/user/userregister.html
+++ b/templates/user/userregister.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="static/files-login/core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" href="static/files-login/theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" href="static/files-login/demo.css" />
+
+  <!--#manifest json file-->
+  <link rel="manifest" href="static/manifest.json">
+    
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="static/files-login/perfect-scrollbar.css" />
     <link href="static/img/icons/acts.png" rel="icon">
