--- a/templates/admin/hospitallist.html
+++ b/templates/admin/hospitallist.html
@@ -62,9 +62,9 @@
              {% for row in hospitaldata %}
               <tr>
                 <td>{{row.hospital_id}}</td>
-                <td>{{ row.hospital_name}}</td>
                 <td>{{ row.hospital_location}}</td>
-                <td>{{ row.phone_no}}</td>
+                <td>{{ row.hospital_location}}</td>
+                <td>{{ row.hphone}}</td>
               </tr>
           {% endfor %}
               
