changes in acceptreject

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 
   <!-- Template Main CSS File -->
   <link href="static/assets/css/style.css" rel="stylesheet">
-
+  <script src="https://kit.fontawesome.com/d5d58b00c4.js" crossorigin="anonymous"></script>
   <!--Script for Notification enabling-->
     <script>
     Notification.requestPermission().then(function (permission) {
@@ -110,7 +110,7 @@
       <div class="row icon-boxes">
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
-            <div class="icon"><i class="ri-stack-line"></i></div>
+            <div class="icon"><i class="fa-solid fa-user"></i></div>
             <h4 class="title"><a href="{{ url_for('userlogin') }}">User Login </a></h4>
           </div>
         </div>
