--- a/templates/driver/acceptReject.html
+++ b/templates/driver/acceptReject.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href=" img/icons/acts.png" rel="icon">
-  <link href=" assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="static/img/icons/acts.png" rel="icon">
+  <link href="static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!--#manifest json file-->
   <link rel="manifest" href="static/manifest.json">
@@ -21,12 +21,12 @@
 
   <!-- Vendor CSS Files -->
   <link href="static/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href=" static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href=" static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href=" static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href=" static/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href=" static/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href=" static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="static/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="static/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href=" static/assets/css/style.css" rel="stylesheet">
