--- a/templates/user/accidentSendNotify.html
+++ b/templates/user/accidentSendNotify.html
@@ -173,7 +173,7 @@
               return;
             }
             const driver_details = document.getElementById('driver_details');
-            driver_details.innerHTML = `<span>Driver ID</span><p>${data.driver_id}</p><span>Distance</span><p id="driver_distance" >Recalculating...<lord-icon src="https://cdn.lordicon.com/avytqtql.json" trigger="loop"  style="width:30px;height:30px"></lord-icon></p><span>Driver Location<span><p>${data.locationName}</p><button class='btn btn-success' onclick="window.open('tel:${data.phone}')">Call Now</button> `;
+            driver_details.innerHTML = `<span>Driver ID</span><p>${data.driver_name}</p><span>Distance</span><p id="driver_distance" >Recalculating...<lord-icon src="https://cdn.lordicon.com/avytqtql.json" trigger="loop"  style="width:30px;height:30px"></lord-icon></p><span>Driver Location<span><p>${data.locationName}</p><button class='btn btn-success' onclick="window.open('tel:${data.phone}')">Call Now</button> `;
             
             //------------------------------Getting Route Distance------------------------------
             const success = (position) =>{
