--- a/templates/user/user_home.html
+++ b/templates/user/user_home.html
@@ -12,7 +12,7 @@
   <link href="static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   <!--#manifest json file-->
   <link rel="manifest" href="static/manifest.json">
-  
+  <script src="https://kit.fontawesome.com/d5d58b00c4.js" crossorigin="anonymous"></script>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -54,7 +54,7 @@
       <div class="row icon-boxes">
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
-            <div class="icon"><i class="ri-stack-line"></i></div>
+            <div class="icon"><i class="fa-solid fa-truck-medical"></i></div>
             <h4 class="title"><a href="{{url_for('accidentSendNotify') }}">Call Ambulance </a></h4>
           </div>
         </div>
