a lot of things

--- a/templates/admin/accidentlist.html
+++ b/templates/admin/accidentlist.html
@@ -10,6 +10,7 @@
  <link href="static/img/icons/acts.png" rel="icon">
   <!--#manifest json file-->
   <link rel="manifest" href="static/manifest.json">
+  <script src="static/sw.js"></script>
 
     <title>ACTS</title>
     <style>
