--- a/templates/admin/admin_login.html
+++ b/templates/admin/admin_login.html
@@ -20,6 +20,7 @@
     <script src="static/files-login/helpers.js"></script>
   <!--#manifest json file-->
   <link rel="manifest" href="static/manifest.json">
+  <script src="static/sw.js"></script>
   </head>
 
   <body>
