--- a/templates/driver/driver_login.html
+++ b/templates/driver/driver_login.html
@@ -19,6 +19,7 @@
 
       <!--#manifest json file-->
   <link rel="manifest" href="static/manifest.json">
+      <script src="static/sw.js"></script>
  
   </head>
   <body>
