--- a/templates/hospital/hospital_home.html
+++ b/templates/hospital/hospital_home.html
@@ -9,13 +9,14 @@
   <title>ACTS</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-
+<script src="https://kit.fontawesome.com/d5d58b00c4.js" crossorigin="anonymous"></script>
   <!-- Favicons -->
   <link href="static/img/icons/acts.png" rel="icon">
   <link href="static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!--#manifest json file-->
   <link rel="manifest" href="static/manifest.json">
+    <script src="static/sw.js"></script>
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
