--- a/templates/index.html
+++ b/templates/index.html
@@ -116,13 +116,13 @@
         </div>
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
-            <div class="icon"><i class="ri-palette-line"></i></div>
+            <div class="icon"><i class="fa-solid fa-taxi"></i></div>
             <h4 class="title"><a href="{{ url_for('driverlogin') }}">Driver Login  </a></h4> 
           </div>
         </div>
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="400">
           <div class="icon-box">
-            <div class="icon"><i class="ri-command-line"></i></div>
+            <div class="icon"><i class="fa-sharp fa-solid fa-hospital"></i></div>
             <h4 class="title"><a href="{{ url_for('hospitallogin') }}">Hospital Login</a></h4>  
           </div>
         </div>
