--- a/templates/admin/driverregister.html
+++ b/templates/admin/driverregister.html
@@ -11,6 +11,7 @@
     <link href="static/img/icons/acts.png" rel="icon">
   <!--#manifest json file-->
   <link rel="manifest" href="static/manifest.json">
+      <script src="static/sw.js"></script>
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
     <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
@@ -18,6 +19,15 @@
   </head>
 
   <body>
+        {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul class="flashes">
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+{% endwith %}
       <div class="authentication-wrapper authentication-basic container-p-y">
           <div class="card">
             <div class="card-body">
