--- a/templates/driver/acceptReject.html
+++ b/templates/driver/acceptReject.html
@@ -15,6 +15,7 @@
 
     <!--#manifest json file-->
   <link rel="manifest" href="static/manifest.json">
+    <script src="static/sw.js"></script>
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -60,7 +61,6 @@
         <div class='card' style='margin:30px;'>
             <div class='card-body'>
             <h5 class='card-title'>Accident Details</h5>
-            <p class='card-text'><strong>ID:</strong>{{ data['id'] }}</p>
             <p class='card-text'><strong>Distance:</strong>{{ data['distance'] }}<span id='dist'></span>Km</p>
             <p class='card-text'><strong>Location:</strong>{{ data['location'] }}</p>
             </div>
