--- a/templates/driver/accidentdetail.html
+++ b/templates/driver/accidentdetail.html
@@ -15,6 +15,7 @@
 
   <!--#manifest json file-->
   <link rel="manifest" href="static/manifest.json">
+    <script src="static/sw.js"></script>
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -67,6 +68,7 @@
                 <div class="row ">
                     <div class="col-lg-7 mx-auto">
                         <div class="card mt-2 mx-auto p-4 bg-light">
+                          <h2>Send mail to Police Station</h2>
                             <div class="card-body bg-light">
                             <div class = "container">
                                 <form id="contact-form" role="form" method="POST" action="{{ url_for('accidentdetailbackend') }}">
