--- a/templates/driver/near_hospital_driver.html
+++ b/templates/driver/near_hospital_driver.html
@@ -9,8 +9,7 @@
   <title>ACTS</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-<script src="https://kit.fontawesome.com/d5d58b00c4.js" crossorigin="anonymous"></script>
-  <!-- Google Fonts -->
+
   <!-- Favicons -->
 <link href="static/img/icons/acts.png" rel="icon">
   <link href="static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -34,12 +33,6 @@
   <link href="static/assets/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <!-- =======================================================
-  * Template Name: OnePage
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/
-  * Author: BootstrapMade.com
-  ======================================================== -->
 
 </head>
 
@@ -53,7 +46,7 @@
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       <nav id="navbar" class="navbar">
           <ul> 
-            <li><a class="nav-link scrollto" href="{{url_for('user_home')}}">Home</a></li>
+            <li><a class="nav-link scrollto" href="{{url_for('driver_home')}}">Home</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -104,10 +97,12 @@
 
     function createHospitalCard(hospital){
         const {hname,location,hphone,latitude,longitude,distance} = hospital;
+       
+        
         return `
         <div class='col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0' data-aos='zoom-in' data-aos-delay='200'>
             <div class='icon-box'>
-                <div class='icon'><i class="fa-sharp fa-solid fa-hospital"></i></div>
+                <div class='icon'><i class='ri-stack-line'></i></div>
                     <p >
                         Hospital Name: ${hname}<br>
                         Location: ${location}<br>
@@ -142,7 +137,7 @@
     }
     const hospitals = 
         [
-            {% for row in nearhospitaldata %}
+            {% for row in hospitaldriverdata %}
                 { 
                     hname : '{{row.hname}}',
                     location: '{{row.hospital_location}}',
