--- a/templates/hospital/bloodrequestlist.html
+++ b/templates/hospital/bloodrequestlist.html
@@ -8,12 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <style>
       body{
-        background-color:#f3e5dc;
+        background-color:#a28089;
       }
     </style>
 
       <!--#manifest json file-->
   <link rel="manifest" href="static/manifest.json">
+      <script src="static/sw.js"></script>
   </head>
   <body>
 
@@ -40,7 +41,7 @@
             </div>
 
             <div class="jumbotron">
-            <table  class='table table-info table-striped'>
+            <table class='table table-info table-striped'>
             <tr>
               <th>Name</th> 
               <th>Case</th> 
