--- a/templates/user/user_login.html
+++ b/templates/user/user_login.html
@@ -14,6 +14,7 @@
     <link href="static/img/icons/acts.png" rel="icon">
   <!--#manifest json file-->
   <link rel="manifest" href="static/manifest.json">
+      <script src="static/sw.js"></script>
 
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
     <!-- Helpers -->
