--- a/templates/user/userbloodonation.html
+++ b/templates/user/userbloodonation.html
@@ -14,6 +14,7 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   <!--#manifest json file-->
   <link rel="manifest" href="static/manifest.json">
+    <script src="static/sw.js"></script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -47,7 +48,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="#">ACTS AUTO</a></h1>
+      <h1 class="logo"><a href="{{url_for('user_home') }}">ACTS AUTO</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -75,6 +76,7 @@
                 <div class="row ">
                     <div class="col-lg-7 mx-auto">
                         <div class="card mt-2 mx-auto p-4 bg-light">
+                            <h2>Blood Donation Form</h2>
                             <div class="card-body bg-light">
                             <div class = "container">
                                 <form id="contact-form" role="form" method="POST" action="{{url_for('userbloodonation') }}">
