--- a/templates/user/userregister.html
+++ b/templates/user/userregister.html
@@ -9,6 +9,7 @@
 
   <!--#manifest json file-->
   <link rel="manifest" href="static/manifest.json">
+      <script src="static/sw.js"></script>
     
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="static/files-login/perfect-scrollbar.css" />
@@ -18,6 +19,15 @@
     <script src="static/files-login/config.js"></script>
   </head>
   <body>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul class="flashes">
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+{% endwith %}
       <div class="authentication-wrapper authentication-basic container-p-y">
           <div class="card">
             <div class="card-body">
@@ -34,7 +44,7 @@
                 </div>
                 <div class="mb-3">
                   <label for="phone" class="form-label">Phone</label>
-                  <input type="text" class="form-control" id="hphone" name="phone"
+                  <input type="number" class="form-control" id="hphone" name="phone"
                     placeholder=" Phone" autofocus required>
                 </div>
                 <div class="mb-3">
